# testci

./: .gitignore  Dockerfile  Dockerfile.bot  Dockerfile.web  README-staging.md  README.md  app.py  bot.py  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  env_example  intraservice_client.py  pyproject.toml  requirements-bot.txt  requirements-dev.txt  requirements.txt
.envs/: .env.prod.example  .env.staging.example  .prod.env  .staging.env
.github/workflows/: build-and-push.yml  ci.yml  deploy-prod.yml  deploy-staging.yml
bot/: bot_app.py
bot/config/: __init__.py  settings.py
bot/handlers/: __init__.py  commands.py  errors.py
bot/middlewares/: __init__.py  access_control.py
bot/services/: __init__.py  config_sync.py  eventlog_worker.py  getlink_worker.py  notifications.py  seafile_store.py  service_icon_store.py  user_store.py
bot/utils/: config_client.py  env_helpers.py  escalation.py  eventlog.py  notify_router.py  polling.py  runtime_config.py  sd_api_client.py  sd_state.py  sd_web_client.py  seafile_client.py  state_store.py  web_client.py
tests/: conftest.py  test_app.py  test_bot.py  test_bot_ping.py  test_config_validation.py  test_core.py  test_escalation.py  test_health.py  test_ready.py  test_status.py
web/: __init__.py  app.py  config_validation.py  db.py  intraservice.py  logging_setup.py  settings.py
web/routes/: __init__.py  config.py  health.py  sd.py
